<resources>
  <string name="app_name">NikeStore4</string>
  <string name="latest">جدیدترین</string>
  <string name="viewAll">مشاهده همه</string>
  <string name="mostSeller">پر فروش ترین</string>
  <string name="comments">نظرات</string>
  <string name="insertComment">درج نظر</string>
  <string name="viewAllComments">مشاهده نظرات</string>
  <string name="addToCart">افزودن به سبد خرید</string>
  <string name="productList">لیست محصولات</string>
  <string name="sort">مرتب سازی</string>

  <string name="sortlatest">جدیدترین</string>
  <string name="sortpopular">پربازددیترین</string>
  <string name="unknownError">خطای نا مشخص</string>
  <string name="sortPriceHightToLow">از زیاد به کم</string>
  <string name="sortlPriceLowToHight">از کم به زیاد</string>
  <string name="title_activity_product_list">ProductListActivity</string>
  <string name="login_tilte">ورود</string>
  <string name="login_screen_tilte">ورود به حساب کاربری</string>
  <string name="email">ایمیل</string>
  <string name="password">رمز عبور</string>
  <string name="sign_up_hint">حساب کاربری دارید؟</string>
  <string name="sign_up">ثبت نام</string>
  <string name="login_hint">ایمیل و رمز عبور خود را وارد کنید</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="cartEmptyStateLoginRequired">وارد حساب کاربری شوید</string>
  <string name="cartEmptyStateCallToAction">وارد شوید</string>
  <string name="cartEmptyState">هیچ خبری نیست!</string>
  <string name="orderHistory">سوابق سفارش</string>
  <string name="orderHistory_orderId">شناسه سفارش</string>
  <string name="orderHistory_payable">مبلغ سفارش</string>
  <string-array name="sort">

    <item>@string/sortlatest</item>
    <item>@string/sortpopular</item>
    <item>@string/sortPriceHightToLow</item>
    <item>@string/sortlPriceLowToHight</item>
  </string-array>
</resources>