<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <ImageView
        android:src="@drawable/ic_nike_logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="56dp"/>

      <EditText
        android:drawableStart="@drawable/ic_search"
        android:background="@drawable/background_et_earch"
        android:layout_width="match_parent"
        android:paddingEnd="12dp"
        android:textSize="15sp"
        android:textColorHint="?colorOnSurface"
        android:paddingStart="12dp"
        android:layout_marginStart="12dp"
        android:hint="جستوجو"
        android:layout_marginEnd="12dp"
        android:layout_height="46dp"/>

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
          android:layout_marginTop="16dp"
          android:id="@+id/viewPager_main"
          android:layout_width="match_parent"
          android:layout_height="match_parent"/>
        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
          android:id="@+id/dots_indicator"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:dotsColor="?colorSurface"
          app:dotsCornerRadius="8dp"
          android:layout_marginBottom="4dp"
          app:dotsSize="8dp"
          app:dotsSpacing="3dp"
          app:dotsWidthFactor="4"
          android:layout_gravity="center_horizontal|bottom"
          app:selectedDotColor="@color/black"
          app:progressMode="false"
          />
      </FrameLayout>
      <FrameLayout
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
          android:layout_gravity="center_vertical|start"
          android:textColor="?android:textColorSecondary"
          android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
          android:text="@string/latest"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
          android:layout_width="wrap_content"
          android:text="@string/viewAll"
          android:id="@+id/main_viewAllLastBtn"
          android:layout_gravity="end"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_height="wrap_content"/>

      </FrameLayout>
      <androidx.recyclerview.widget.RecyclerView
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:clipToPadding="false"
        android:id="@+id/productRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <FrameLayout
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
          android:layout_gravity="center_vertical|start"
          android:textColor="?android:textColorSecondary"
          android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
          android:text="@string/mostSeller"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
          android:layout_width="wrap_content"
          android:text="@string/viewAll"
          android:id="@+id/main_viewAllPopularBtn"
          android:layout_gravity="end"
          style="@style/Widget.MaterialComponents.Button.TextButton"
          android:layout_height="wrap_content"/>

      </FrameLayout>
      <androidx.recyclerview.widget.RecyclerView
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:clipToPadding="false"
        android:id="@+id/productRvMostSeller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    </LinearLayout>

  </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>